// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching source clusters is pending 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": true,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is rejected 1`] = `
Object {
  "errorSourceClusters": "error",
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": true,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is successful, and there is data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [
    Object {
      "0": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000001",
        "id": "1",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster1",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
      "1": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000002",
        "id": "2",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster2",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
      "2": Object {
        "created_on": "2016-07-15T18:28:16Z",
        "drs_automation_level": null,
        "drs_enabled": null,
        "drs_migration_threshold": null,
        "effective_cpu": null,
        "effective_memory": null,
        "ems_id": "10000000000012",
        "ems_ref": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ems_ref_obj": "/api/clusters/00000002-0002-0002-0002-00000000024b",
        "ext_management_system": Object {
          "emstype": "vmwarews",
        },
        "ha_admit_control": null,
        "ha_enabled": null,
        "ha_max_failures": null,
        "href": "http://localhost:3000/api/clusters/10000000000003",
        "id": "3",
        "last_perf_capture_on": null,
        "name": "VMWare Cluster3",
        "type": null,
        "uid_ems": "00000002-0002-0002-0002-00000000024b",
        "updated_on": "2016-07-15T18:28:16Z",
        "v_parent_datacenter": "Datacenter",
      },
    },
  ],
  "targetClusters": Array [],
}
`;

exports[`fetching source clusters is successful, and there is no data 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "errorSourceClusters": null,
  "errorTargetClusters": null,
  "isFetchingSourceClusters": false,
  "isFetchingTargetClusters": false,
  "isRejectedSourceClusters": false,
  "isRejectedTargetClusters": false,
  "sourceClusters": Array [],
  "targetClusters": Array [],
}
`;
